# CPF_Wealth-Builder

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
api/: .env.example  .vercelignore  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_seed_2026.py  0003_simulation_runs.py  0004_tax_config.py  0005_medishield.py  0006_assumptions.py  0007_member_special_access.py  0008_member_password.py  0009_member_income_growth.py  0010_srs_config.py  0011_member_residency.py  (+1 more)
api/api/: index.py
api/app/: main.py
api/tests/: conftest.py  test_ai_diff.py  test_ai_extractor.py  test_analysis_api.py  test_assumptions.py  test_assumptions_wiring.py  test_auth.py  test_engine_age55_overflow.py  test_engine_allocation.py  test_engine_contribution.py  test_engine_cpflife.py  test_engine_domain.py  test_engine_growth.py  test_engine_interest_base.py  test_engine_interest_extra.py  test_engine_milestones.py  test_engine_money.py  test_engine_overflow.py  test_engine_policy_growth.py  test_engine_policy_resolver.py  test_engine_readiness.py  test_engine_retirement.py  test_engine_sa_closure_interest.py  test_engine_scenarios.py  test_engine_simulation.py  test_engine_simulation_cpflife.py  test_engine_srs.py  test_engine_tax.py  test_input_guardrails.py  test_medishield.py  test_member_access.py  test_member_api.py  test_member_list_api.py  test_member_update_api.py  test_phase7_engine.py  test_policy_api.py  test_policy_ingest_api.py  test_rates.py  test_simulation_api.py  test_simulation_model.py  (+1 more)
(+108 files in other folders)
