[project]
name = "cpf-api"
version = "0.1.0"
description = "CPF Wealth Builder API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy>=2.0.40,<2.1",
    "alembic>=1.14,<2.0",
    "psycopg[binary]>=3.2.6,<4.0",
    "httpx>=0.28,<1.0",
    "anthropic>=0.45,<1.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8,<3.0",
    "bcrypt>=4.1,<5.0",
]

[tool.vercel]
# Vercel's native FastAPI builder wraps this ASGI app and serves all routes.
# Path is relative to this project's Root Directory (set to `api` in Vercel).
entrypoint = "app.main:app"
